--- a/EJERCICIO2.2.html
+++ b/EJERCICIO2.2.html
@@ -6,5 +6,17 @@
     </head>
     <body>
         <h1>Un zumo de naranja</h1>
+        <img src="foto de una naranja.jpg">
+        <p> Necisitamos</p>
+        <ol>
+            <li>2 naranjas</li>
+            <li>1 exprimidor</li>
+        </ol>
+        <p>Pasos</p>
+        <ul>
+            <li>Cortar las naranjas por la mitad</li>
+            <li>Exprimir las naranjas</li>
+        </ul>
+        <p>Recuerda que el zumo de naranja natural recién exprimido tiene una larga lista de beneficios para tu salud</p>
     </body>
 </html>
